# grafo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
benches/: renderer_partial_updates.rs
examples/: backdrop_blur.rs  basic.rs  bench_render_loop.rs  box_shadow.rs  fonts.rs  gaussian_blur.rs  group_opacity.rs  msaa.rs  multi_texture.rs  shadow_and_blur.rs  shape_texturing.rs  star_wars_tilt.rs  test_example.rs  text_buffer.rs  transforms.rs  video_playback.rs  visual_test_grid.rs  winit.rs  winit_softbuffer.rs  winit_softbuffer_cpu_swizzle.rs  winit_transparency.rs
examples/assets/: star_wars_reference.html
grafo-test-scenes/: Cargo.toml
grafo-test-scenes/src/: expectations.rs  lib.rs  scene.rs  shaders.rs
src/: cache.rs  color.rs  debug_tools.rs  effect.rs  id.rs  image_draw_data.rs  lib.rs  pipeline.rs  renderer.rs  shape.rs  stroke.rs  text.rs  texture_manager.rs  transformator.rs  util.rs  vertex.rs  wgpu_state.rs
src/gradient/: errors.rs  gpu.rs  mod.rs  normalize.rs  sampling.rs  types.rs
src/renderer/: construction.rs  draw_queue.rs  effects.rs  metrics.rs  occlusion.rs  passes.rs  preparation.rs  readback.rs  rect_utils.rs  rendering.rs  surface.rs  traversal.rs  types.rs
src/shaders/: argb_swizzle.wgsl  shader.wgsl  texture_shader.wgsl
tests/: perspective_transform_test.rs  visual_regression.rs
