[package]
name = "grafo"
version = "0.8.1"
edition = "2021"
description = "A GPU-accelerated rendering library for Rust"
keywords = ["rendering", "vector_graphics", "gui", "graphics", "image"]
categories = ["rendering::graphics-api", "gui"]
authors = ["Anton Suprunchuk <anton.suprunchuk@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/antouhou/grafo"
documentation = "https://docs.rs/grafo/"
readme = "README.md"

[dependencies]
bytemuck = "1.23"
wgpu = "25.0"
ahash = "0.8"
lyon = { version = "1.0"}
glyphon = "0.9"
easy-tree = { version = "0.2" }
log = "0.4"
lru = "0.15"

[dev-dependencies]
winit = "0.30"
env_logger = "0.11"
futures = "0.3"
image = "0.25"
euclid = "0.22"

[features]
performance_measurement = []
